@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2008-08-16 08:16:39 $
+ * $Date: 2008-08-16 08:34:18 $
  *
  * Copyright 2005-2008 Kouhei Sutou <kou@cozmixng.org>
  *
@@ -93,8 +93,13 @@ VALUE rb_cairo__gc_guarded_objects (VALUE klass);
 
 const char *rb_cairo__inspect (VALUE object);
 
-VALUE rb_cairo__glyphs_to_ruby_object (cairo_glyph_t *glyphs, int n_glyphs);
+VALUE rb_cairo__glyphs_to_ruby_object (cairo_glyph_t *glyphs, int num_glyphs);
+void rb_cairo__glyphs_from_ruby_object (VALUE rb_glyphs,
+                                        cairo_glyph_t **glyphs, int *num_glyphs);
 VALUE rb_cairo__text_clusters_to_ruby_object (cairo_text_cluster_t *clusters,
-                                              int n_clusters);
+                                              int num_clusters);
+void rb_cairo__text_clusters_from_ruby_object (VALUE rb_clusters,
+                                               cairo_text_cluster_t **clusters,
+                                               int *num_clusters);
 
 #endif
